Fix CORS y doble barra en URL